--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -622,6 +622,10 @@ video {
   bottom: 248px;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .left-\[309px\] {
   left: 309px;
 }
@@ -638,6 +642,10 @@ video {
   right: 577px;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .top-\[180px\] {
   top: 180px;
 }
@@ -648,14 +656,6 @@ video {
 
 .top-\[34px\] {
   top: 34px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.top-0 {
-  top: 0px;
 }
 
 .z-10 {
@@ -705,8 +705,16 @@ video {
   margin-bottom: 2rem;
 }
 
+.mb-\[150px\] {
+  margin-bottom: 150px;
+}
+
 .mb-\[38px\] {
   margin-bottom: 38px;
+}
+
+.mb-\[43px\] {
+  margin-bottom: 43px;
 }
 
 .mr-auto {
@@ -741,8 +749,16 @@ video {
   margin-top: 15px;
 }
 
+.mt-\[26px\] {
+  margin-top: 26px;
+}
+
 .mt-\[30px\] {
   margin-top: 30px;
+}
+
+.mt-\[31px\] {
+  margin-top: 31px;
 }
 
 .mt-\[50px\] {
@@ -759,22 +775,6 @@ video {
 
 .mt-\[70px\] {
   margin-top: 70px;
-}
-
-.mt-\[\] {
-  margin-top: ;
-}
-
-.mt-\[26px\] {
-  margin-top: 26px;
-}
-
-.mb-\[43px\] {
-  margin-bottom: 43px;
-}
-
-.mb-\[150px\] {
-  margin-bottom: 150px;
 }
 
 .block {
@@ -857,6 +857,10 @@ video {
   width: 351px;
 }
 
+.w-\[375px\] {
+  width: 375px;
+}
+
 .w-\[441px\] {
   width: 441px;
 }
@@ -873,14 +877,6 @@ video {
   width: 100%;
 }
 
-.w-0 {
-  width: 0px;
-}
-
-.w-\[375px\] {
-  width: 375px;
-}
-
 .max-w-\[237px\] {
   max-width: 237px;
 }
@@ -891,11 +887,6 @@ video {
 
 .max-w-\[515px\] {
   max-width: 515px;
-}
-
-.translate-x-0 {
-  --tw-translate-x: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-x-full {
@@ -999,6 +990,12 @@ video {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .space-y-5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1021,18 +1018,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(6px * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(6px * var(--tw-space-y-reverse));
-}
-
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
-
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden {
@@ -1116,10 +1101,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\] {
-  background-color: ;
-}
-
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1140,6 +1121,11 @@ video {
   padding-right: 14px;
 }
 
+.px-\[24px\] {
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1158,16 +1144,6 @@ video {
 .py-\[22px\] {
   padding-top: 22px;
   padding-bottom: 22px;
-}
-
-.px-\[35px\] {
-  padding-left: 35px;
-  padding-right: 35px;
-}
-
-.px-\[24px\] {
-  padding-left: 24px;
-  padding-right: 24px;
 }
 
 .pb-10px {
@@ -1198,8 +1174,16 @@ video {
   padding-bottom: 18px;
 }
 
+.pb-\[197px\] {
+  padding-bottom: 197px;
+}
+
 .pb-\[31px\] {
   padding-bottom: 31px;
+}
+
+.pb-\[35px\] {
+  padding-bottom: 35px;
 }
 
 .pb-\[50px\] {
@@ -1262,6 +1246,10 @@ video {
   padding-top: 1.75rem;
 }
 
+.pt-\[23px\] {
+  padding-top: 23px;
+}
+
 .pt-\[26px\] {
   padding-top: 26px;
 }
@@ -1272,18 +1260,6 @@ video {
 
 .pt-\[92px\] {
   padding-top: 92px;
-}
-
-.pb-\[197px\] {
-  padding-bottom: 197px;
-}
-
-.pb-\[35px\] {
-  padding-bottom: 35px;
-}
-
-.pt-\[23px\] {
-  padding-top: 23px;
 }
 
 .text-center {
@@ -1418,16 +1394,12 @@ video {
   line-height: 55.73px;
 }
 
-.leading-3 {
-  line-height: .75rem;
+.tracking-\[1px\] {
+  letter-spacing: 1px;
 }
 
 .tracking-wide {
   letter-spacing: 2px;
-}
-
-.tracking-\[1px\] {
-  letter-spacing: 1px;
 }
 
 .text-\[\#3D3D3D66\] {
@@ -1591,11 +1563,11 @@ body {
 }
 
 .interyer-nomer__swiper .swiper-slide {
-  transition: all 0.2s linear;
+  transition: width 0.3s ease !important;
 }
 
 .interyer-nomer__swiper .swiper-slide-active {
-  min-width: 720px !important;
+  width: 720px !important;
 }
 
 .outline-btn {
@@ -1615,6 +1587,7 @@ body {
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 400;
+  text-transform: uppercase;
   line-height: 18px;
   --tw-text-opacity: 1;
   color: rgb(185 153 132 / var(--tw-text-opacity));
@@ -1940,6 +1913,10 @@ input[type="range"] {
     order: 1;
   }
 
+  .md\:mb-\[120px\] {
+    margin-bottom: 120px;
+  }
+
   .md\:mb-\[43px\] {
     margin-bottom: 43px;
   }
@@ -1950,6 +1927,10 @@ input[type="range"] {
 
   .md\:mt-\[120px\] {
     margin-top: 120px;
+  }
+
+  .md\:mt-\[130px\] {
+    margin-top: 130px;
   }
 
   .md\:mt-\[30px\] {
@@ -1968,12 +1949,16 @@ input[type="range"] {
     margin-top: 42px;
   }
 
-  .md\:mt-\[60px\] {
-    margin-top: 60px;
+  .md\:mt-\[46px\] {
+    margin-top: 46px;
   }
 
   .md\:mt-\[51px\] {
     margin-top: 51px;
+  }
+
+  .md\:mt-\[60px\] {
+    margin-top: 60px;
   }
 
   .md\:block {
