--- a/src/css/global.css
+++ b/src/css/global.css
@@ -63,7 +63,7 @@ body {
 }
 
 .outline-btn {
-  @apply font-Muller uppercase h-[34px] flex items-center justify-center text-sm leading-[18px] py-2 px-6 rounded-[50px] font-normal border-light-brown border text-light-brown transition-all  ease-linear hover:bg-light-brown hover:text-white;
+  @apply font-Muller uppercase h-[34px] flex items-center justify-center text-sm px-6 rounded-[50px] font-normal border-light-brown border text-light-brown transition-all ease-linear hover:bg-light-brown hover:text-white;
 }
 
 /*  */
